--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,9 +1,11 @@
 :root {
     --color1: #808080;
-    --color2: #da70d6;
+    --color2: #00ffff;
+    --color3: #9B26B6;
 }
 
 body {
+    font-size: 20px;
     font-family: Helvetica, Arial, sans-serif;
     margin: 0;
 }
@@ -55,10 +57,16 @@ section {
     /* flex-wrap: wrap; */
 }
 
-div p {
+div p,
+div address {
     display: flex;
     margin: 5px 15px;
     padding: 7px 15px;
+}
+
+div p a,
+div p span {
+    margin-right: 8px;
 }
 
 footer {
@@ -68,6 +76,11 @@ footer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.experience-link {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .flex-column {
@@ -82,14 +95,14 @@ footer {
 
 .section-title {
     font-size: 38px;
-    color: var(--color2);
+    color: var(--color1);
     border-right: 5px solid;
     text-align: right;
     padding-right: 8px;
 }
 
 .primary-border {
-    border-color: black;
+    border-color: var(--color3);
 }
 
 .flex-div {
@@ -116,4 +129,33 @@ footer {
     height: 200px;
     width: 100%;
     max-width: 100%;
+}
+
+.secondary-border {
+    border: 8px solid var(--color1);
+    width: 600px;
+    height: 400px;
+}
+
+.secondary-border > div {
+    width: 100%;
+    height: 100%;  
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: bottom;
+}
+
+.secondary-border div div {
+    background-color: var(--color1);
+    font-style: black;
+    width: 20%;
+    height: 30%;
+    margin-bottom: 10px;
+}
+
+.run-buddy > div {
+background-image: url("../images/run-buddy-pic.jpg");
+background-position: right;
 }
