--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,161 +1,195 @@
 :root {
-    --color1: #808080;
-    --color2: #00ffff;
-    --color3: #9B26B6;
+  --color1: #808080;
+  --color2: #00ffff;
+  --color3: #9b26b6;
 }
 
 body {
-    font-size: 20px;
-    font-family: Helvetica, Arial, sans-serif;
-    margin: 0;
+  font-size: 20px;
+  font-family: Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 header {
-    padding: 20px 35px;
-    background-color: var(--color1);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    /* background-image: url("../images/header.jpg"); */
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 80%;
-    z-index: 9999;
-    align-items: center;
+  padding: 20px 35px;
+  background-color: var(--color1);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 80%;
+  z-index: 9999;
+  align-items: center;
 }
 
 header h1 {
-    font-weight: bolder;
-    font-size: 35px;
-    color: var(--color2);
-    margin: 0;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-weight: bolder;
+  font-size: 35px;
+  color: var(--color2);
+  margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header nav {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  list-style: none;
 }
 
 header nav ul li a {
-    padding: 10px 15px;
-    font-size: 1.55vw;
-    color: var(--color2);
+  padding: 10px 15px;
+  font-size: 1.55vw;
+  color: var(--color2);
 }
 
 section {
-    display: flex;
-    /* flex-wrap: wrap; */
+  display: flex;
+  /* flex-wrap: wrap; */
 }
 
-div p,
-div address {
-    display: flex;
-    margin: 5px 15px;
-    padding: 7px 15px;
+.contact-me div address {
+  display: flex;
+  margin: 5px 15px;
+  padding: 7px 15px;
 }
 
-div p a,
+.resume div p a,
 div p span {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 footer {
-    background: var(--color1);
-    width: 100%;
-    padding: 40px 35px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  background: var(--color1);
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .experience-link {
-    font-size: 24px;
-    font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .flex-column {
-    display: flex;
-    flex-basis: 10%;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    flex-grow: 1;
-    margin-left: 5px;
-    padding-right: 8px;
+  display: flex;
+  flex-basis: 10%;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  flex-grow: 1;
+  margin-left: 5px;
+  padding-right: 8px;
 }
 
 .section-title {
-    font-size: 38px;
-    color: var(--color1);
-    border-right: 5px solid;
-    text-align: right;
-    padding-right: 8px;
+  font-size: 38px;
+  color: var(--color1);
+  border-right: 5px solid;
+  text-align: right;
+  padding-right: 8px;
 }
 
 .primary-border {
-    border-color: var(--color3);
+  border-color: var(--color3);
 }
 
 .flex-div {
-    display: flex;
-    flex-basis: 40%;
-    flex-wrap: wrap;
-    flex-grow: 4;
-    align-items: center;
+  display: flex;
+  flex-basis: 40%;
+  flex-wrap: wrap;
+  flex-grow: 4;
+  align-items: center;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .pic img {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 .pic {
-    background-image: url("../images/mahogany-floor-wood-background-header.jpg");
-    background-size: cover;
-    overflow: hidden;
-    height: 200px;
-    width: 100%;
-    max-width: 100%;
+  background-image: url("../images/mahogany-floor-wood-background-header.jpg");
+  background-size: cover;
+  overflow: hidden;
+  height: 200px;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
 }
 
 .secondary-border {
-    border: 8px solid var(--color1);
-    width: 600px;
-    height: 400px;
+  border: 8px solid var(--color1);
+  width: 600px;
+  height: 400px;
+}
+
+.featured-item {
+  width: 100% !important;
+  height: 600px !important;
 }
 
 .secondary-border > div {
-    width: 100%;
-    height: 100%;  
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: bottom;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: bottom;
 }
 
 .secondary-border div div {
-    background-color: var(--color1);
-    font-style: black;
-    width: 20%;
-    height: 30%;
-    margin-bottom: 10px;
+  background-color: var(--color1);
+  font-style: black;
+  width: 20%;
+  margin-bottom: 10px;
+  padding: 4px;
 }
 
 .run-buddy > div {
-background-image: url("../images/run-buddy-pic.jpg");
-background-position: right;
+  background-image: url("../images/run-buddy-pic.jpg");
+  background-position: right;
+}
+
+.dta > div {
+  background-image: url("../images/dta.JPG");
+  background-position: center;
+}
+
+.proj {
+  margin: 0 20px 20px 0;
+}
+
+a.secondary-border {
+  text-decoration: none;
+}
+
+a h4 {
+  color: var(--color2);
+}
+
+.proj p {
+  color: var(--color2);
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        width: max-content;
+    }
+    nav {
+        width: max-content;
+    }
 }
